--- a/Flack/Xibs/AddChannelVC.xib
+++ b/Flack/Xibs/AddChannelVC.xib
@@ -34,7 +34,7 @@
                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZMH-xG-F67">
-                    <rect key="frame" x="30" y="251" width="315" height="320"/>
+                    <rect key="frame" x="30" y="186" width="315" height="320"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create Channel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fkg-L1-Str">
                             <rect key="frame" x="80.000000000000014" y="42" width="155.33333333333337" height="25.333333333333329"/>
@@ -45,8 +45,8 @@
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wpa-Ye-wlv">
                             <rect key="frame" x="279" y="8" width="28" height="28"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="28" id="DiG-8i-mUy"/>
-                                <constraint firstAttribute="width" constant="28" id="xON-vF-7rh"/>
+                                <constraint firstAttribute="width" constant="28" id="PUY-ex-ZKo"/>
+                                <constraint firstAttribute="height" constant="28" id="uSN-Gj-Y7b"/>
                             </constraints>
                             <state key="normal" image="closeButton"/>
                             <connections>
@@ -54,11 +54,11 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oaS-75-gjf" customClass="RoundedButton" customModule="Flack" customModuleProvider="target">
-                            <rect key="frame" x="32.666666666666657" y="245" width="249.99999999999997" height="50"/>
+                            <rect key="frame" x="33" y="245" width="250" height="50"/>
                             <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="250" id="VVV-5Y-ZtD"/>
-                                <constraint firstAttribute="height" constant="50" id="YJx-Go-Qz1"/>
+                                <constraint firstAttribute="height" constant="50" id="0H8-jo-k3d"/>
+                                <constraint firstAttribute="width" constant="250" id="vRf-p3-ecD"/>
                             </constraints>
                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
                             <state key="normal" title="Create Channel">
@@ -73,10 +73,11 @@
                                 <action selector="createChannelPressed:" destination="-1" eventType="touchUpInside" id="mwg-Z9-bkP"/>
                             </connections>
                         </button>
-                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="Eqb-CL-7UP">
-                            <rect key="frame" x="32.666666666666657" y="115" width="249.99999999999997" height="74"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" alignment="center" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="Eqb-CL-7UP">
+                            <rect key="frame" x="32.666666666666629" y="115" width="250" height="74"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
-                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0Xo-nZ-fD3">
+                                <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0Xo-nZ-fD3">
                                     <rect key="frame" x="0.0" y="0.0" width="250" height="17"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="250" id="gJE-kv-PP6"/>
@@ -85,7 +86,7 @@
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits"/>
                                 </textField>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LxC-Pa-n5E">
+                                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LxC-Pa-n5E">
                                     <rect key="frame" x="0.0" y="29" width="250" height="2"/>
                                     <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
@@ -93,7 +94,7 @@
                                         <constraint firstAttribute="height" constant="2" id="e9f-3N-bip"/>
                                     </constraints>
                                 </view>
-                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PU3-71-auf">
+                                <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PU3-71-auf">
                                     <rect key="frame" x="0.0" y="43" width="250" height="17"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="250" id="ACn-fZ-KXh"/>
@@ -102,7 +103,7 @@
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits"/>
                                 </textField>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="COA-64-wFG">
+                                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="COA-64-wFG">
                                     <rect key="frame" x="0.0" y="72" width="250" height="2"/>
                                     <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
@@ -115,27 +116,25 @@
                     </subviews>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstAttribute="bottom" secondItem="oaS-75-gjf" secondAttribute="bottom" constant="25" id="AYR-xQ-GXe"/>
-                        <constraint firstItem="Fkg-L1-Str" firstAttribute="top" secondItem="ZMH-xG-F67" secondAttribute="top" constant="42" id="DXZ-ux-7ac"/>
-                        <constraint firstItem="Fkg-L1-Str" firstAttribute="centerX" secondItem="ZMH-xG-F67" secondAttribute="centerX" id="FcU-Ot-9sg"/>
-                        <constraint firstAttribute="trailing" secondItem="Wpa-Ye-wlv" secondAttribute="trailing" constant="8" id="HEc-bQ-m21"/>
-                        <constraint firstItem="oaS-75-gjf" firstAttribute="centerX" secondItem="ZMH-xG-F67" secondAttribute="centerX" id="Hdz-ZO-xCa"/>
-                        <constraint firstAttribute="height" constant="320" id="gFn-HE-c3S"/>
-                        <constraint firstItem="Wpa-Ye-wlv" firstAttribute="top" secondItem="ZMH-xG-F67" secondAttribute="top" constant="8" id="nAm-KP-gY1"/>
-                        <constraint firstItem="Eqb-CL-7UP" firstAttribute="centerY" secondItem="ZMH-xG-F67" secondAttribute="centerY" constant="-8" id="oH7-UR-Yib"/>
-                        <constraint firstItem="Eqb-CL-7UP" firstAttribute="centerX" secondItem="ZMH-xG-F67" secondAttribute="centerX" id="y27-PK-A1c"/>
+                        <constraint firstItem="Wpa-Ye-wlv" firstAttribute="top" secondItem="ZMH-xG-F67" secondAttribute="top" constant="8" id="3SM-F5-boH"/>
+                        <constraint firstItem="oaS-75-gjf" firstAttribute="centerX" secondItem="ZMH-xG-F67" secondAttribute="centerX" id="A9D-9B-cB7"/>
+                        <constraint firstItem="Fkg-L1-Str" firstAttribute="top" secondItem="ZMH-xG-F67" secondAttribute="top" constant="42" id="BNJ-hB-3q1"/>
+                        <constraint firstAttribute="trailing" secondItem="Wpa-Ye-wlv" secondAttribute="trailing" constant="8" id="CAS-H3-fqs"/>
+                        <constraint firstAttribute="width" constant="315" id="CaS-w3-SjG"/>
+                        <constraint firstItem="Fkg-L1-Str" firstAttribute="centerX" secondItem="ZMH-xG-F67" secondAttribute="centerX" id="do5-fc-bhB"/>
+                        <constraint firstAttribute="bottom" secondItem="oaS-75-gjf" secondAttribute="bottom" constant="25" id="pcx-7y-6eX"/>
+                        <constraint firstAttribute="height" constant="320" id="y5P-2V-pOM"/>
                     </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="p1N-t0-B2a" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="KT8-vh-eDL"/>
-                <constraint firstItem="ZMH-xG-F67" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="30" id="SNe-tN-RA7"/>
-                <constraint firstItem="ZMH-xG-F67" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="207" id="U6y-0L-1RZ"/>
                 <constraint firstAttribute="bottom" secondItem="p1N-t0-B2a" secondAttribute="bottom" id="V8Z-Q8-XPk"/>
                 <constraint firstItem="p1N-t0-B2a" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="YaC-oq-2mo"/>
                 <constraint firstItem="p1N-t0-B2a" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="hac-oX-Hum"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="ZMH-xG-F67" secondAttribute="trailing" constant="30" id="vlw-81-Ie6"/>
+                <constraint firstItem="ZMH-xG-F67" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="oBd-40-YQl"/>
+                <constraint firstItem="ZMH-xG-F67" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" constant="-60" id="rqE-PB-fLO"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="25.5" y="52"/>
